--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=yzGaDdRYVT2Bs7JgbUG8yzGaDdRYVT2Bs7JgbUG8
-DEBUG=1
+DEBUG=0s
 ANSIBLE_SSH_PASS=DarkCubed123@
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=access_server
