--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     env_file:
       - ./.env
     depends_on:
-      - db
+      - control-node-db
     
   control-node-db:
     image: postgres:12.0-alpine
@@ -39,7 +39,7 @@ services:
     ports:
       - 1080:80
     depends_on:
-      - web
+      - control-node-web
 
 volumes:
   postgres_data:
