--- a/access_server/Dockerfile
+++ b/access_server/Dockerfile
@@ -1,21 +1,7 @@
-FROM python:3.8.3-alpine as builder
-
-WORKDIR /usr/src/app
+FROM python:3.8.3-alpine
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-
-RUN apk update && \
-    apk add postgresql-dev gcc python3-dev musl-dev
-
-RUN pip install --upgrade pip
-COPY . .
-
-COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
-
-
-FROM python:3.8.3-alpine
 
 RUN mkdir -p /home/access_server_user
 
@@ -28,16 +14,12 @@ RUN mkdir $APP_HOME/serve
 RUN mkdir $APP_HOME/media
 WORKDIR $APP_HOME
 
-RUN apk update && apk add libpq
-COPY --from=builder /usr/src/app/wheels /wheels
-COPY --from=builder /usr/src/app/requirements.txt .
-RUN pip install --no-cache /wheels/*
-
-COPY ./entrypoint.sh $APP_HOME
-
 COPY . $APP_HOME
 
 RUN chown -R access_server_user:access_server_user $APP_HOME
+
+RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev libpq 
+RUN pip install -r requirements.txt
 
 USER access_server_user
 
