--- a/access_server/Dockerfile
+++ b/access_server/Dockerfile
@@ -18,7 +18,8 @@ COPY . $APP_HOME
 
 RUN chown -R access_server_user:access_server_user $APP_HOME
 
-RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq
+RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 USER access_server_user
