--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
 
   control-node-nginx:
     build: ./nginx
-    commad: nginx -g 'daemon off;'
+    command: nginx -g 'daemon off;'
     networks:
       - control-net
     volumes:
