--- a/access_server/Dockerfile
+++ b/access_server/Dockerfile
@@ -15,6 +15,7 @@ RUN mkdir $APP_HOME/media
 WORKDIR $APP_HOME
 COPY . $APP_HOME
 COPY manage.py $HOME/manage.py
+WORKDIR $HOME
 
 RUN chown -R access_server_user:access_server_user $APP_HOME
 
