--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=access_server
 SQL_USER=access_server_user
 SQL_PASSWORD=DarkCubed123
-SQL_HOST=db
+SQL_HOST=control-node-db
 SQL_PORT=5432
 DATABASE=postgres
