--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ ANSIBLE_SSH_PASS=DarkCubed123@
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=access_server
 SQL_USER=access_server_user
-SQL_PASSWORD=DarkCubed123
+SQL_PASSWORD=DarkCubed123@
 SQL_HOST=control-node-db
 SQL_PORT=5432
 DATABASE=postgres
