--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://172.16.10.197:1080;
+        proxy_pass http://access_server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
