fix ansible ssh

--- a/access_server/Dockerfile
+++ b/access_server/Dockerfile
@@ -9,6 +9,7 @@ RUN addgroup -S access_server_user && adduser -S access_server_user -G access_se
 
 ENV HOME = /home/access_server_user
 ENV APP_HOME=/home/access_server_user/access_server
+ENV ANSIBLE_HOST_KEY_CHECKING=False
 RUN mkdir $APP_HOME
 RUN mkdir $APP_HOME/serve
 RUN mkdir $APP_HOME/media
@@ -17,7 +18,7 @@ COPY . $APP_HOME
 
 RUN chown -R access_server_user:access_server_user $APP_HOME
 
-RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo
+RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo sshpass bash
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
