--- a/access_server/Dockerfile
+++ b/access_server/Dockerfile
@@ -17,10 +17,12 @@ COPY . $APP_HOME
 
 RUN chown -R access_server_user:access_server_user $APP_HOME
 
-RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo sshpass bash openssh
+RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo sshpass bash openssh openrc
 RUN pip install --upgrade pip
 RUN pip install -r $APP_HOME/requirements.txt
 
 RUN chmod +x $APP_HOME/entrypoint.sh
+
+WORKDIR $APP_HOME
 
 ENTRYPOINT ["/home/access_server_user/access_server/entrypoint.sh"]
