--- a/access_server/Dockerfile
+++ b/access_server/Dockerfile
@@ -7,7 +7,7 @@ RUN mkdir -p /home/access_server_user
 
 RUN addgroup -S access_server_user && adduser -S access_server_user -G access_server_user
 
-ENV HOME = /home/access_server_user
+ENV HOME=/home/access_server_user
 ENV APP_HOME=/home/access_server_user/access_server
 ENV ANSIBLE_HOST_KEY_CHECKING=False
 RUN mkdir $APP_HOME
@@ -17,7 +17,7 @@ COPY . $APP_HOME
 
 RUN chown -R access_server_user:access_server_user $APP_HOME
 
-RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo sshpass bash openssh openrc
+RUN apk update && apk add gcc musl-dev jpeg-dev zlib-dev libffi-dev cairo-dev pango-dev gdk-pixbuf-dev postgresql-dev python3-dev libpq openssl-dev cargo sshpass bash openssh openrc crontab
 RUN pip install --upgrade pip
 RUN pip install -r $APP_HOME/requirements.txt
 
