--- a/access_server/access_server/static/spinup.yml
+++ b/access_server/access_server/static/spinup.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Add network
       docker_network:
-        name: "{{ lookup('env', 'D3_NETWORK_NAME') }}"
+        name: "a-{{ lookup('env', 'D3_NETWORK_NAME') }}"
         driver: ipvlan
         driver_options:
           parent: "{{ lookup('env', 'D3_INTERFACE') }}"
@@ -21,7 +21,7 @@
         hostname: "{{ lookup('env', 'D3_HOSTNAME') }}"
         image: internal-node:latest
         networks:
-          - name: "{{ lookup('env', 'D3_NETWORK_NAME') }}"
-            ipv4_address: "{{ lookup('env', 'D3_CONTAINER_IP') }}"
           - name: control-net
             ipv4_address: "{{ lookup('env', 'D3_CONTROL_NET_IP') }}"
+          - name: "a-{{ lookup('env', 'D3_NETWORK_NAME') }}"
+            ipv4_address: "{{ lookup('env', 'D3_CONTAINER_IP') }}"
