--- a/access_server/access_server/static/status_two.yml
+++ b/access_server/access_server/static/status_two.yml
@@ -4,6 +4,8 @@
   remote_user: controller
   tasks:
     - shell: ping "{{ lookup('env', 'ADDRESS') }}"
+      async: 5
+      poll: 0
       args:
         executable: /bin/bash
       register: ps
