--- a/access_server/access_server/static/status_two.yml
+++ b/access_server/access_server/static/status_two.yml
@@ -2,8 +2,10 @@
 
 - hosts: "{{ lookup('env', 'STATUS_HOSTNAME') }}"
   remote_user: controller
+  vars:
+    - address: "{{ lookup('env', 'ADDRESS') }}"
   tasks:
-    - name: Ping the specified IP Ranges
-      local_action: 'shell ping -a -c 1 -W 1 "{{ lookup('env', 'ADDRESS') }}"'
+    - shell: "ping -a -c 1 -W 1 {{ address }}"
       register: result
-      failed_when: ('100% packet loss' in result.stdout)
+
+    - debug: var=result.stdout_lines
