add auto restarts

--- a/access_server/access_server/static/spinup.yml
+++ b/access_server/access_server/static/spinup.yml
@@ -20,6 +20,7 @@
         name: "{{ lookup('env', 'D3_HOSTNAME') }}"
         hostname: "{{ lookup('env', 'D3_HOSTNAME') }}"
         image: internal-node:latest
+        restart_policy: always
         networks:
           - name: control-net
             ipv4_address: "{{ lookup('env', 'D3_CONTROL_NET_IP') }}"
