--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: 
         context: ./access_server
         dockerfile: Dockerfile
+    restart: always
     networks:
       - control-net
     command: gunicorn access_server.wsgi:application --bind 0.0.0.0:8000
@@ -18,6 +19,7 @@ services:
 
   control-node-nginx:
     build: ./nginx
+    restart: always
     networks:
       - control-net
     volumes:
